# mate-resource-applet

./: .gitignore  CMakeLists  CMakeLists.txt  README.md  SConscript  SConstruct  debug.sh  org.mate.applets.ResourceApplet.mate-panel-applet  org.mate.applets.ResourceApplet.mate-panel-applet.in  org.mate.applets.ResourceMonitorApplet.mate-panel-applet.in.in  org.mate.panel.ResourceApplet.mate-panel-applet.in  org.mate.panel.ResourceAppletFactory.service.in  org.mate.panel.applet.ResourceAppletFactory.service  org.mate.panel.applet.ResourceAppletFactory.service.in  resource-applet.c  resource-applet.h.in
cmake/Modules/: FindGlib.cmake  FindLibmatepanelapplet-3.0.cmake
src/: main.c  resource-applet.c  resource-applet.h  resource-monitor-applet.c  resource-monitor-applet.h
